==

* Messages are marked unread after a delay (default 2 sec) in
  thread-view. They can be manually toggled with 'N'.

* Use Tab and S-Tab to jump between unread messages in thread-view.

* Open element with 'Space', also in editor.

* Yank raw or decoded message or element to primary clipboard with 'Y'
  or 'y', useful for applying patches.

* Cancel sending with Ctrl + C.

* Yank the Message-ID to the primary clipboard with C-y.

* Make id:Message-ID urls clickable.

* Make Message-ID customizable, and User-Agent optional. These may also
  be customized with a plugin.

* Use Boost::log for logging.

* Some hints about usage are shown (level of detail can be configured)

* 'c' in thread-view composes message to sender (or receiver if sender
    is you).

* Taeer Bar-Yam <taeer@necsi.edu>: Allow any key name defined by GDK to
  be entered.

* Thread-view: '*' toggle 'flagged' on message, 'a' toggle inbox on
  whole thread.

* Removed MathJax support, since it is not widely used. Can be enabled
  manually by adding sourcing the script in the thread-view theme file.

* When replying, match encryption / signature level.

== v0.6 / 2016-07-23

* Use any editor (general XEmbed support in edit-message window): Emacs
  works.

* Plugins: Python and Lua plugins can now be made, parts of ThreadIndex
  and ThreadView are exposed allowing extesion of the user interface and
  advanced customization. Check out the plugins available at GitHub.

* Crypto: GPG encryption and signing is added. Decryption and and
  signature status is shown in greater detail.

* Repository moved to github.com/astroidmail.

* Thread-view: Search email text using '/'

* Synchronize maildir flags if so configured in .notmuch-config.

* Signatures: Include per-account signatures (either included or
  attached).

* Saved searches: Save a search with 'C-S', then browse saved searches
  and stats with 'C-f'. You can also browse search history using Up
  and Down in the search-bar.
